# eely-base-esp

./: CMakeLists.txt  CODING_STYLE_GUIDE.txt  Eelybase.cpp  Eelybase.h  EelybaseStatus.h  readme.md
Api/: ApiHandlerBase.cpp  ApiHandlerBase.h  ApiManager.cpp  ApiManager.h  ConfigGetHandler.cpp  ConfigGetHandler.h  ConfigSetHandler.cpp  ConfigSetHandler.h  DeviceInfoGetHandler.cpp  DeviceInfoGetHandler.h  DiagnosticGetHandler.cpp  DiagnosticGetHandler.h  OtaUploadHandler.cpp  OtaUploadHandler.h  RestartHandler.cpp  RestartHandler.h  WifiSettingsSetHandler.cpp  WifiSettingsSetHandler.h  _ApiBase.h
DnsServer/: DnsServer.cpp  DnsServer.h
Helper/: DiagnosticBuffer.cpp  DiagnosticBuffer.h  Json.cpp  Json.h  JsonArray.cpp  base64.c  base64.h  dateHelper.c  string_format.h
HttpClient/: HttpClient.cpp  HttpClient.h  default_http_client_event_handler.c  default_http_client_event_handler.h
Interfaces/: I2c.cpp  I2c.h  ModbusRTUSimple.cpp  ModbusRTUSimple.h
Peripherals/: Hmc5883l.cpp  Hmc5883l.h
System/: ConfigStore.cpp  ConfigStore.h  SystemMessage.cpp  SystemMessage.h  SystemTime.cpp  SystemTime.h  _SystemBase.h  factory_reset.c  spiffs.c  wifi.h  wifiAp.cpp  wifiName.cpp  wifiSta.cpp  wifiStart.cpp
Tasks/: TaskBase.cpp  TaskBase.h
WebServer/: WebServer.cpp  WebServer.h
